[gd_scene load_steps=10 format=3 uid="uid://cw2ksajoqt1mh"]

[ext_resource type="Script" path="res://Scenes/Obstacles/Bosses/Boss2/boss_2.gd" id="1_wd3uu"]
[ext_resource type="Script" path="res://Resources/DataHolders/Script/boss_2_template.gd" id="2_ld8hb"]
[ext_resource type="Resource" uid="uid://ygnrkip44go8" path="res://Scenes/Obstacles/Bosses/Boss2/Attacks/1.tres" id="3_a3qxa"]
[ext_resource type="Resource" uid="uid://d3ssmctxbo47p" path="res://Scenes/Obstacles/Bosses/Boss2/Attacks/2.tres" id="4_o3fhi"]
[ext_resource type="PackedScene" uid="uid://c5simjy2ny58e" path="res://Scenes/Obstacles/Bosses/Boss2/AttackLine/attack_line.tscn" id="4_r24rw"]
[ext_resource type="Resource" uid="uid://0awbifguww8i" path="res://Scenes/Obstacles/Bosses/Boss2/Attacks/3.tres" id="5_habft"]
[ext_resource type="Resource" uid="uid://bs8j8eapo8fc2" path="res://Scenes/Obstacles/Bosses/Boss2/Attacks/4.tres" id="6_pmonu"]
[ext_resource type="Resource" uid="uid://rnae5stghthl" path="res://SFX/SoundsData/whoosh_air.tres" id="7_nqiec"]

[sub_resource type="CircleShape2D" id="CircleShape2D_rlwa4"]
radius = 125.0

[node name="Boss2" type="RigidBody2D"]
position = Vector2(524, 0)
collision_layer = 4
freeze = true
script = ExtResource("1_wd3uu")
strikes_moveset = Array[ExtResource("2_ld8hb")]([ExtResource("3_a3qxa"), ExtResource("4_o3fhi"), ExtResource("5_habft"), ExtResource("6_pmonu")])
attack_sound = ExtResource("7_nqiec")
speed = 0.0

[node name="StrikeTimerLeft" type="Timer" parent="."]
one_shot = true

[node name="StrikeTimerMiddle" type="Timer" parent="."]
one_shot = true

[node name="StrikeTimerRight" type="Timer" parent="."]
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_rlwa4")
disabled = true

[node name="Lines" type="Node2D" parent="."]

[node name="Left" parent="Lines" instance=ExtResource("4_r24rw")]
visible = false
scale = Vector2(1, 100)

[node name="Middle" parent="Lines" instance=ExtResource("4_r24rw")]
visible = false
scale = Vector2(1, 100)

[node name="Right" parent="Lines" instance=ExtResource("4_r24rw")]
visible = false
scale = Vector2(1, 100)

[connection signal="timeout" from="StrikeTimerLeft" to="." method="strike_timeout" binds= [-1]]
[connection signal="timeout" from="StrikeTimerMiddle" to="." method="strike_timeout" binds= [0]]
[connection signal="timeout" from="StrikeTimerRight" to="." method="strike_timeout" binds= [1]]
[connection signal="on_end_animation" from="Lines/Left" to="." method="spawn_bolt" binds= [0]]
[connection signal="on_inverse_request" from="Lines/Left" to="." method="inverse_line" binds= [0]]
[connection signal="on_end_animation" from="Lines/Middle" to="." method="spawn_bolt" binds= [1]]
[connection signal="on_inverse_request" from="Lines/Middle" to="." method="inverse_line" binds= [1]]
[connection signal="on_end_animation" from="Lines/Right" to="." method="spawn_bolt" binds= [2]]
[connection signal="on_inverse_request" from="Lines/Right" to="." method="inverse_line" binds= [2]]
